src/PclSharp.Extern/std/VectorOfUInt.generated.h

// Code generated by a template
#pragma once
#include "..\export.h"
#include <vector>


using namespace std;


typedef vector<uint32_t> vectorType;

#ifdef __cplusplus  
extern "C" {  
#endif

EXPORT(vectorType*) std_vector_uint_ctor()
{
	return new vector<uint32_t>();
}

EXPORT(vectorType*) std_vector_uint_ctor_count(int count)
{
	return new vector<uint32_t>(count);
}

EXPORT(void) std_vector_uint_delete(vector<uint32_t>** ptr)
{
	delete *ptr;
	*ptr = NULL;
}

EXPORT(void) std_vector_uint_at(vector<uint32_t>* ptr, size_t idx, uint32_t* value)
{
	*value = ptr->at(idx);
}

EXPORT(size_t) std_vector_uint_size(vector<uint32_t>* ptr)
{
	return ptr->size();
}

EXPORT(void) std_vector_uint_clear(vector<uint32_t>* ptr)
{
	ptr->clear();
}

EXPORT(void) std_vector_uint_resize(vector<uint32_t>* ptr, int32_t size)
{
	ptr->resize(size);
}

EXPORT(void) std_vector_uint_add(vector<uint32_t>* ptr, uint32_t value)
{
		ptr->push_back(value);
}

EXPORT(void) std_vector_uint_insert(vector<uint32_t>* ptr, ptrdiff_t index, uint32_t value)
{
		ptr->insert(ptr->begin()+index, value);
}

EXPORT(uint32_t*) std_vector_uint_data(vector<uint32_t>* ptr)
{
	return ptr->data();
}

#ifdef __cplusplus  
}
#endif